JC: added jquery and data picker to the engine. spec passes.

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -33,7 +33,7 @@ zh-CN:
   Finish Date : '完成日期'
   Executioner : '执行人'
   Expedite : '加急'
-  Delete  : '删除'
-  
+  Delete  : '删除'  
   Save : '保存'
   'Save' : '保存'
+  Task Name : '任务名称'
